// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration action creators createIdentity should attempt to create an identity 1`] = `
Array [
  Object {
    "type": "SET_IS_REGISTERING",
    "value": true,
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Fueling with ether",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Registering decentralized identity",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Preparing launch",
  },
  Object {
    "type": "DID_SET",
    "value": "did:jolo:mockid",
  },
  Object {
    "type": "SET_IS_REGISTERING",
    "value": false,
  },
  Object {
    "actions": Array [
      Object {
        "routeName": "Home",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 2`] = `
Array [
  Array [
    "hunter0=",
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 3`] = `
Array [
  Array [
    Object {
      "controllingKeyPath": "m/73'/0'/0'/0",
      "did": "did:jolo:mockid",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 4`] = `
Array [
  Array [
    Object {
      "encryptedEntropy": "b77451145154d43d51ad3d31ead162749208ac14ac4aed7c1200970995e5eca5",
      "timestamp": 946681200000,
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 5`] = `
Array [
  Array [
    Object {
      "data": Array [
        2,
        190,
        222,
        236,
        223,
        239,
        223,
        32,
        17,
        81,
        201,
        162,
        78,
        254,
        96,
        10,
        97,
        136,
        138,
        150,
        254,
        179,
        2,
        244,
        3,
        231,
        162,
        235,
        71,
        152,
        56,
        126,
        92,
      ],
      "type": "Buffer",
    },
  ],
]
`;

exports[`Registration action creators recoverIdentity should attempt tp recover an identity 1`] = `
Array [
  Object {
    "type": "DID_SET",
    "value": "did:jolo:mockid",
  },
  Object {
    "type": "SET_SEED_PHRASE_SAVED",
  },
  Object {
    "actions": Array [
      Object {
        "routeName": "Home",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators recoverIdentity should attempt tp recover an identity 2`] = `
Array [
  Array [
    "hunter0=",
  ],
]
`;

exports[`Registration action creators recoverIdentity should attempt tp recover an identity 3`] = `
Array [
  Array [
    Object {
      "controllingKeyPath": "m/73'/0'/0'/0",
      "did": "did:jolo:mockid",
    },
  ],
]
`;

exports[`Registration action creators recoverIdentity should attempt tp recover an identity 4`] = `
Array [
  Array [
    Object {
      "encryptedEntropy": "8d9c0464aa694f4feb5fd13e21285353089da774efa662da4e3b1ae6a161f2ad",
      "timestamp": 946681200000,
    },
  ],
]
`;

exports[`Registration action creators submitEntropy should correctly navigate to route and provide the entropy 1`] = `
Array [
  Object {
    "routeName": "RegistrationProgress",
    "type": "Navigation/NAVIGATE",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Encrypting and storing data locally",
  },
]
`;
